# adventofcode

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/lib/day01/: day01_part1.rs  day01_part2.rs  mod.rs
src/lib/day02/: day02_part1.rs  day02_part2.rs  mod.rs
src/lib/day03/: day03_part01.rs  day03_part02.rs  mod.rs
