# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
    authors = ["0xFave"]
    description = "My solutions for Advent of Code 2025, implemented in Rust. "
    edition = "2021"
    homepage = "https://github.com/0xfave/adventofcode"
    license = "MIT"
    name = "adventofcode"
    version = "0.1.0"

[dependencies]

    # The core APIs, including the Serialize and Deserialize traits. Always
    # required when using Serde. The "derive" feature is only required when
    # using #[derive(Serialize, Deserialize)] to make Serde work with structs
    # and enums defined in your crate.
    serde = { version = "1.0", features = ["derive"] }

    # Each data format lives in its own crate; the sample code below uses JSON
    # but you may be using a different one.
    serde_json = "1.0"
